--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".activity.SignupActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.BottomMenuActivity" />
+        <activity android:name=".activity.PetshopDetailActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
