--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".ui.view.activity.PetSpeciesActivity" />
         <activity android:name=".ui.view.activity.PetGenderActivity" />
         <activity android:name=".ui.view.activity.PetNameActivity" />
+        <activity android:name=".ui.view.activity.PetSelectionActivity" />
+        <activity android:name=".ui.view.activity.DatetimeSelectionActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
