--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
+    def glide_version = '4.12.0'
+    api "com.github.bumptech.glide:glide:$glide_version"
+
     //Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 
